--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,63 @@
-<h1>Ignacio</h1>
+<h2 class="welcome-msg">Welcome to CSE Motors!</h2>
+
+<section class="hero">
+
+  <div class="hero-text">
+    <h3>DMC Delorean</h3>
+    <ul>
+      <li>3 Cup holders</li>
+      <li>Superman doors</li>
+      <li>Fuzzy dice!</li>
+    </ul>
+    <a class="cta-button" href="#">Own Today</a>
+  </div>
+  <div class="hero-img">
+    <img src="../images/vehicles/delorean.jpg" alt="DMC Delorean">
+  </div>
+</section>
+
+<section class="main-content">
+
+  <div class="reviews">
+    <h3>DMC Delorean Reviews</h3>
+    <ul>
+      <li>"So fast it's almost like traveling in time." (4/5)</li>
+      <li>"Coolest ride on the road." (4/5)</li>
+      <li>"I'm feeling McFly!" (5/5)</li>
+      <li>"The most futuristic ride of our day." (4.5/5)</li>
+      <li>"80's livin and I love it!." (5/5)</li>
+    </ul>
+  </div>
+
+  <div class="upgrades">
+    <h3>Delorean Upgrades</h3>
+    <div class="upgrade-grid">
+      <div>
+        <div class="img-box">
+          <img src="../images/upgrades/flux-cap.png" alt="Flux Capacitor">
+        </div>
+        <a href="#">Flux Capacitor</a>
+      </div>
+      <div>
+        <div class="img-box">
+          <img src="../images/upgrades/flame.jpg" alt="Flame Decals">
+        </div>
+        <a href="#">Flame Decals</a>
+      </div>
+      <div>
+        <div class="img-box">
+          <img src="../images/upgrades/bumper_sticker.jpg" alt="Bumper Stickers">
+        </div>
+        <a href="#">Bumper Stickers</a>
+      </div>
+      <div>
+        <div class="img-box">
+          <img src="../images/upgrades/hub-cap.jpg" alt="Hub Caps">
+        </div>
+        <a href="#">Hub Caps</a>
+      </div>
+    </div>
+  </div>
+
+
+</section>
