--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,7 +16,7 @@
 #wrapper {
   display: flex;
   flex-direction: column;
-  padding: 5px;
+  padding: 10px;
   background-color: var(--main);
 }
 
@@ -164,13 +164,24 @@ a {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 1rem;
+  max-width: 400px;
+}
+
+.img-box-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .img-box {
-  text-align: center;
+  display: flex;
+  justify-content: center; /* horizontal center */
+  align-items: center;
   background-color: #ffffff;
   padding: 1rem;
-  height: 100%;
+  height: 150px;
+  width: 150px;
   border-radius: 8px;
   border: 3px solid var(--highlight);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -197,7 +208,7 @@ footer {
   margin-top: 2rem;
 }
 
-/* @media screen and (max-width: 600px) {
+/* @media screen and (min-width: 600px) {
   .hero {
     flex-direction: column;
   }
@@ -205,29 +216,50 @@ footer {
   .main-content {
     flex-direction: column;
   }
-}
+} */
 
-@media screen and (max-width: 800px) {
-  .navbar {
+@media screen and (min-width: 800px) {
+  #wrapper {
+    display: flex;
     flex-direction: column;
-    align-items: center;
+    border-radius: 10px;
+    border: 5px solid #333;
+    min-height: 100vh;
+    margin: 5px auto;
+    /* padding: 0 1rem; */
+    background-color: var(--main);
+    max-width: 1200px;
   }
 
+  body {
+    background: url("../images/site/small_check.jpg") repeat;
+  }
 
-  #wrapper {
-  display: flex;
-  flex-direction: column;
-  border-radius: 10px;
-  border: 5px solid #333;
-  min-height: 100vh;
-  margin: 2rem 10rem;
-  padding: 0 1rem;
-  background-color: var(--main);
+  .navbar ul {
+    margin: 10px 0;
+  }
+
+  .hero-text {
+    margin-left: 5rem;
+    font-size: 1.5rem;
+  }
+
+  @media screen and (min-width: 1400px) {
+    body {
+      background: url("../images/site/checkerboard.jpg") repeat;
+    }
+  }
+
+  @media screen and (min-width: 800px) {
+    .hero-text {
+      font-size: 2rem;
+    }
+
+    .main-content {
+      flex-direction: row-reverse;
+    }
+    .upgrade-grid {
+      max-width: 400px;
+    }
+  }
 }
-
-body {
-  background: url("../images/site/checkerboard.jpg") repeat;
-}
-
-
-} */
