--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,25 +32,25 @@
   <div class="upgrades">
     <h3>Delorean Upgrades</h3>
     <div class="upgrade-grid">
-      <div>
+      <div class="img-box-container">
         <div class="img-box">
           <img src="../images/upgrades/flux-cap.png" alt="Flux Capacitor">
         </div>
         <a href="#">Flux Capacitor</a>
       </div>
-      <div>
+      <div class="img-box-container">
         <div class="img-box">
           <img src="../images/upgrades/flame.jpg" alt="Flame Decals">
         </div>
         <a href="#">Flame Decals</a>
       </div>
-      <div>
+      <div class="img-box-container">
         <div class="img-box">
           <img src="../images/upgrades/bumper_sticker.jpg" alt="Bumper Stickers">
         </div>
         <a href="#">Bumper Stickers</a>
       </div>
-      <div>
+      <div class="img-box-container">
         <div class="img-box">
           <img src="../images/upgrades/hub-cap.jpg" alt="Hub Caps">
         </div>
