font changed CSS

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -22,7 +22,7 @@
 
 body {
   /* background: url("../images/site/checkerboard.jpg") repeat; */
-  font-family: Arial, sans-serif;
+  font-family: "Lato", sans-serif;
   margin: 0;
   padding: 0;
 }
