Week 4 Deliver Login View completed

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -297,6 +297,51 @@ footer {
   height: auto;
 }
 
+/* login form */
+.form-container {
+  background-color: #00a3cc;
+  padding: 1.5rem;
+  border-radius: 10px;
+  width: 300px;
+  margin: auto;
+  color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.form-container label,
+.form-container input {
+  display: block;
+  width: 100%;
+  margin-bottom: 0.5rem;
+}
+.form-container input {
+  padding: 0.5rem;
+  border: none;
+  border-radius: 5px;
+}
+.password-rules {
+  font-size: 0.9rem;
+  color: black;
+  margin: 0.5rem 0;
+}
+.form-container button {
+  margin-top: 0.5rem;
+  padding: 0.5rem;
+  width: 100%;
+  border: none;
+  border-radius: 5px;
+  background: #222;
+  color: white;
+  cursor: pointer;
+}
+.signup-link {
+  text-align: center;
+  margin-top: 1rem;
+}
+.signup-link a {
+  color: #0033cc;
+  text-decoration: underline;
+}
+
 @media screen and (min-width: 800px) {
   #wrapper {
     display: flex;
