--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -342,6 +342,31 @@ footer {
   text-decoration: underline;
 }
 
+input:required:invalid,
+input:focus:invalid {
+  background-color: #ffe6e6;
+  border: 2px solid red;
+}
+
+input:required:valid {
+  background-color: #e6ffea;
+  border: 2px solid green;
+}
+
+input {
+  transition: background-color 0.3s ease, border-color 0.3s ease;
+}
+
+.notice {
+  color: red;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.notice li {
+  list-style: none;
+}
+
 @media screen and (min-width: 800px) {
   #wrapper {
     display: flex;
