--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -1,6 +1,8 @@
 <h1><%= title %></h1>
 
-<%- messages('login') %>
+<div class="notice">
+  <%- messages() %>
+</div>
 
 <div class="form-container">
   <form action="/account/login" method="post">
