--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -1,10 +1,23 @@
 <% if (title) { %>
-  <h1><%= title %></h1>
-<% } else { res.redirect('/') } %>
+  <h1>
+    <%= title %>
+  </h1>
+  <% } else { res.redirect('/') } %>
 
-<%- messages('notice') %>
+    <%- messages('notice') %>
 
-<ul>
-  <li><a href="/inv/add-classification">Add New Classification</a></li>
-  <li><a href="/inv/add-inventory">Add New Inventory</a></li>
-</ul>
+      <ul>
+        <li><a href="/inv/add-classification">Add New Classification</a></li>
+        <li><a href="/inv/add-inventory">Add New Inventory</a></li>
+      </ul>
+
+
+      <h2>Manage Inventory</h2>
+      <p>Choose a classification to see available vehicles.</p>
+
+      <%- classificationSelect %>
+
+        <table id="inventoryDisplay"></table>
+        <noscript>JavaScript must be enabled to use this page.</noscript>
+
+        <script src="/js/inventory.js"></script>
