--- a/views/inventory/edit-inventory.ejs
+++ b/views/inventory/edit-inventory.ejs
@@ -1,44 +1,66 @@
-<% if (title) { %>
-  <h1><%= title %></h1>
-<% } else { res.redirect('/') } %>
+<% if (errors) { %>
+  <ul class="notice">
+    <% errors.array().forEach(error=> { %>
+      <li>
+        <%= error.msg %>
+      </li>
+      <% }) %>
+  </ul>
+  <% } %>
 
-<%- messages('notice') %>
+    <% if (title) { %>
+      <h1>
+        <%= title %>
+      </h1>
+      <% } else { res.redirect('/') } %>
 
-<div class="form-container">
-  <form action="/inv/update" method="post">
-    <!-- Hidden input to keep track of which vehicle to update -->
-    <input type="hidden" name="inv_id" value="<%= typeof inv_id != 'undefined' ? inv_id : '' %>">
+        <%- messages('notice') %>
 
-    <label for="classificationSelect">Classification</label>
-    <%- classificationSelect %>
+          <div class="form-container">
+            <form action="/inv/update" method="post" id="updateForm">
 
-    <label for="inv_make">Make</label>
-    <input type="text" id="inv_make" name="inv_make" required value="<%= typeof inv_make != 'undefined' ? inv_make : '' %>">
 
-    <label for="inv_model">Model</label>
-    <input type="text" id="inv_model" name="inv_model" required value="<%= typeof inv_model != 'undefined' ? inv_model : '' %>">
+              <label for="classificationSelect">Classification</label>
+              <%- classificationSelect %>
 
-    <label for="inv_year">Year</label>
-    <input type="number" id="inv_year" name="inv_year" required value="<%= typeof inv_year != 'undefined' ? inv_year : '' %>">
+                <label for="inv_make">Make</label>
+                <input type="text" id="inv_make" name="inv_make" required
+                  value="<%= typeof inv_make != 'undefined' ? inv_make : '' %>">
 
-    <label for="inv_description">Description</label>
-    <textarea id="inv_description" name="inv_description" required><%= typeof inv_description != 'undefined' ? inv_description : '' %></textarea>
+                <label for="inv_model">Model</label>
+                <input type="text" id="inv_model" name="inv_model" required
+                  value="<%= typeof inv_model != 'undefined' ? inv_model : '' %>">
 
-    <label for="inv_image">Image Path</label>
-    <input type="text" id="inv_image" name="inv_image" required value="<%= typeof inv_image != 'undefined' ? inv_image : '/images/vehicles/no-image.png' %>">
+                <label for="inv_year">Year</label>
+                <input type="number" id="inv_year" name="inv_year" required
+                  value="<%= typeof inv_year != 'undefined' ? inv_year : '' %>">
 
-    <label for="inv_thumbnail">Thumbnail Path</label>
-    <input type="text" id="inv_thumbnail" name="inv_thumbnail" required value="<%= typeof inv_thumbnail != 'undefined' ? inv_thumbnail : '/images/vehicles/no-image.png' %>">
+                <label for="inv_description">Description</label>
+                <textarea id="inv_description" name="inv_description"
+                  required><%= typeof inv_description != 'undefined' ? inv_description : '' %></textarea>
 
-    <label for="inv_price">Price</label>
-    <input type="number" step="0.01" id="inv_price" name="inv_price" required value="<%= typeof inv_price != 'undefined' ? inv_price : '' %>">
+                <label for="inv_image">Image Path</label>
+                <input type="text" id="inv_image" name="inv_image" required
+                  value="<%= typeof inv_image != 'undefined' ? inv_image : '/images/vehicles/no-image.png' %>">
 
-    <label for="inv_miles">Miles</label>
-    <input type="number" id="inv_miles" name="inv_miles" required value="<%= typeof inv_miles != 'undefined' ? inv_miles : '' %>">
+                <label for="inv_thumbnail">Thumbnail Path</label>
+                <input type="text" id="inv_thumbnail" name="inv_thumbnail" required
+                  value="<%= typeof inv_thumbnail != 'undefined' ? inv_thumbnail : '/images/vehicles/no-image.png' %>">
 
-    <label for="inv_color">Color</label>
-    <input type="text" id="inv_color" name="inv_color" required value="<%= typeof inv_color != 'undefined' ? inv_color : '' %>">
+                <label for="inv_price">Price</label>
+                <input type="number" step="0.01" id="inv_price" name="inv_price" required
+                  value="<%= typeof inv_price != 'undefined' ? inv_price : '' %>">
 
-    <button type="submit">Update Vehicle</button>
-  </form>
-</div>
+                <label for="inv_miles">Miles</label>
+                <input type="number" id="inv_miles" name="inv_miles" required
+                  value="<%= typeof inv_miles != 'undefined' ? inv_miles : '' %>">
+
+                <label for="inv_color">Color</label>
+                <input type="text" id="inv_color" name="inv_color" required
+                  value="<%= typeof inv_color != 'undefined' ? inv_color : '' %>">
+
+                <button type="submit" disabled>Update Vehicle</button>
+                <input type="hidden" name="inv_id" value="<%= typeof inv_id != 'undefined' ? inv_id : '' %>">
+            </form>
+          </div>
+          <script src="/js/inv-update.js"></script>
