--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -1,8 +1,20 @@
 <% if (title) { %>
-  <h1><%= title %></h1>
-<% } %>
+  <h1>
+    <%= title %>
+  </h1>
+  <% } %>
 
-<%- messages('notice') %>
-<%- messages('error') %>
+    <%- messages('notice') %>
+      <%- messages('error') %>
 
-<p>You're logged in</p>
+        <% if (typeof accountData !=='undefined' ) { %>
+          <h2>Welcome <%= accountData.account_firstname %>
+          </h2>
+
+          <p><a href="/account/update/<%= accountData.account_id %>">Update Account Information</a></p>
+
+          <% if (accountData.account_type==='Employee' || accountData.account_type==='Admin' ) { %>
+            <h3>Inventory Management</h3>
+            <p><a href="/inv/">Manage Inventory</a></p>
+            <% } %>
+              <% } %>
